--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 
 <!DOCTYPE html>
-<html lang="pt-br">
-
-  <head>
-    <meta charset="UTF-8">
-    <title>Carta aos interessados</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
-
-  <body>
-    <div class="content">
-        <div class="data">Florianópolis, 23 de Maio de 2020</div>
-        <div class="saudacao">Prezados,</div>
-        <div class="mensagem">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ex id suscipit egestas. Aenean vitae nisi pharetra, sollicitudin justo eu, laoreet nisl. Quisque nec eleifend quam. Cras in dolor a neque ultricies hendrerit. Vivamus non malesuada ex, eu lacinia ipsum. Phasellus metus mi, egestas ac ante mollis, dapibus vulputate purus. Nulla semper libero quis volutpat tincidunt. Fusce ut purus ex. Donec metus ante, molestie a fringilla condimentum, tristique in nunc. Suspendisse semper purus a elit congue tincidunt. Morbi bibendum at elit sagittis pharetra. Fusce aliquet enim et est malesuada imperdiet. Cras auctor neque id leo consectetur, quis iaculis arcu euismod. Nullam dapibus enim vel dolor volutpat congue. Mauris varius nulla sit amet justo interdum, sit amet auctor sem sagittis. Vivamus varius turpis non tellus ullamcorper, ac bibendum justo hendrerit.</p>
-            <p>Proin eget tellus lobortis, dapibus lacus iaculis, vehicula justo. Donec quis massa vel nibh vehicula porttitor quis in odio. Vivamus eget rutrum elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam volutpat feugiat neque quis dictum. Pellentesque venenatis sed nisl nec convallis. Donec hendrerit accumsan nulla, at finibus est posuere vel. Vestibulum ut ex a odio fermentum varius ac in arcu. Proin dolor justo, scelerisque a viverra eu, laoreet quis nisl. Morbi condimentum ex mauris, lobortis semper dui feugiat a. Pellentesque tincidunt euismod fermentum. Nulla facilisi. Proin ac tincidunt metus. Vivamus sit amet justo elit.</p>
-        </div>
-        <div class="despedida">Atenciosamente,</div>
-        <div class="assinatura">Rodrigo Cavalheiro Filho</div>
-    </div>
-  </body>
-
+<html lang=“pt-br”>
+<head>
+	<meta charset="UTF-8"/>
+	<link rel="stylesheet" type="text/css" href="styles.css" />
+	<title>Carta | Responsive Web Development </title>
+</head>
+<body>
+	<main>
+		<article>
+			<section class="data">
+				<p class="estilo_data">Florianópolis, 28 de maio de 2020</p>
+			</section>
+			<section class="apresentacao">
+				<h1>Prezados,</h1>
+			</section>
+			<section class="conteudo">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ex id suscipit egestas. Aenean vitae nisi pharetra, sollicitudin justo eu, laoreet nisl. Quisque nec eleifend quam. Cras in dolor a neque ultricies hendrerit. Vivamus non malesuada ex, eu lacinia ipsum. Phasellus metus mi, egestas ac ante mollis, dapibus vulputate purus. Nulla semper libero quis volutpat tincidunt. Fusce ut purus ex. Donec metus ante, molestie a fringilla condimentum, tristique in nunc. Suspendisse semper purus a elit congue tincidunt. Morbi bibendum at elit sagittis pharetra. Fusce aliquet enim et est malesuada imperdiet. Cras auctor neque id leo consectetur, quis iaculis arcu euismod. Nullam dapibus enim vel dolor volutpat congue. Mauris varius nulla sit amet justo interdum, sit amet auctor sem sagittis. Vivamus varius turpis non tellus ullamcorper, ac bibendum justo hendrerit.</p>
+          <p>Proin eget tellus lobortis, dapibus lacus iaculis, vehicula justo. Donec quis massa vel nibh vehicula porttitor quis in odio. Vivamus eget rutrum elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam volutpat feugiat neque quis dictum. Pellentesque venenatis sed nisl nec convallis. Donec hendrerit accumsan nulla, at finibus est posuere vel. Vestibulum ut ex a odio fermentum varius ac in arcu. Proin dolor justo, scelerisque a viverra eu, laoreet quis nisl. Morbi condimentum ex mauris, lobortis semper dui feugiat a. Pellentesque tincidunt euismod fermentum. Nulla facilisi. Proin ac tincidunt metus. Vivamus sit amet justo elit.</p>
+			</section>	
+			<section class="despedida">
+				<p>Atenciosamente,</p>
+        <p class="aluno">Rodrigo Cavalheiro Filho</p>
+      </section>
+		</article>
+	</main>
+</body>
 </html>
